[tool.poetry]
name = "asci-notebooks"
version = "0.1.0"
description = ""
authors = ["proskurin_da3 <proskurin_da3@proskurin.da3-B460MDS3HV2>"]
readme = "README.md"
packages = [{include = "asci_notebooks"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.24.0"
autopep8 = "^2.0.2"
pylint = "^2.17.4"
pandas = "^2.0.3"
plotly = "^5.15.0"
nbformat = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
